tests/src/frontend/expand/invalid/extension_class2.sk
class A()
native extension class A
